# urirun-connector-subactor

./: README.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_subactor.py
urirun_connector_subactor/: __init__.py  connector.manifest.json  core.py
