[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-subactor"
version = "0.4.0"
description = "Server-side Subactor business-process connector for urirun"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
dependencies = [
  "urirun>=0.4.14",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
urirun-connector-subactor = "urirun_connector_subactor.core:main"

[project.entry-points."urirun.bindings"]
subactor = "urirun_connector_subactor.core:bindings"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_connector_subactor*"]

[tool.setuptools.package-data]
urirun_connector_subactor = ["connector.manifest.json"]
